# erp-system

./: .gitignore  DEVELOPMENT_NOTES.md  USAGE.md  docker-compose.yml  push.bat  push_log.txt  pyproject.toml  架构.txt  模块优化点.txt
erp_common/: __init__.py  auth.py  config.py  database.py  exceptions.py
erp_common/schemas/: __init__.py  base.py  events.py
erp_common/utils/: __init__.py  jwt_utils.py  kafka_utils.py  redis_utils.py
erp_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nginx/: nginx.conf
scripts/: fix_role_data.sql  health_check.sh  init.sql  init_permissions.sql
services/cost_service/: Dockerfile  __init__.py  api.py  main.py  models.py  schemas.py  service.py
services/item_service/: Dockerfile  __init__.py  api.py  main.py  models.py  schemas.py  service.py
services/job_service/: Dockerfile  __init__.py  api.py  main.py  models.py  schemas.py  service.py
services/member_service/: Dockerfile  __init__.py  api.py  main.py  models.py  schemas.py  service.py
services/order_service/: Dockerfile  __init__.py  api.py  main.py  models.py  schemas.py  service.py
services/production_service/: Dockerfile  __init__.py  api.py  main.py  models.py  schemas.py  service.py
services/promo_service/: Dockerfile  __init__.py  api.py  main.py  models.py  schemas.py  service.py
services/purchase_service/: Dockerfile  __init__.py  api.py  main.py  models.py  schemas.py  service.py
services/stock_service/: Dockerfile  __init__.py  api.py  main.py  (+3 more)
web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
(+36 files in other folders)
